<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~  Licensed under the MIT License.
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="@+id/chat_title_view" />

    <TextView
        android:id="@+id/chat_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:text="STREAM CHAT"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/chat_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/background_dark"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/chat_text_field"
        app:layout_constraintTop_toBottomOf="@id/chat_title_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_1" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_2" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_3" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_4" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_5" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_6" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_7" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_8" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_9" />

            <TextView
                style="@style/CustomTextBubble"
                android:text="@string/chat_text_10" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/chat_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#333333"
        android:ems="10"
        android:inputType="textShortMessage"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:text="Send a chat message..."
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/chat_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chat_scroll_view" />

    <ImageButton
        android:id="@+id/chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chat_text_field"
        app:layout_constraintTop_toBottomOf="@id/chat_scroll_view"
        app:tint="#673AB7" />

</androidx.constraintlayout.widget.ConstraintLayout>